en SpiderPi 1 commit

--- a/source/docs/11.computer_control_robot.md
+++ b/source/docs/11.computer_control_robot.md
@@ -22,11 +22,11 @@ If the error message appears, the reason is that the folder is saved by the file
 
 (1) Turn on the switch to start SpiderPi. 
 
-(2) After turning on, Raspberry Pi will be in a AP hotspot mode and launch a Wi-Fi hotspot with a network named with the first letters "HW". (Desktop computers require your own wireless network card) 
+(2) After turning on, Raspberry Pi will be in a AP hotspot mode and launch a Wi-Fi hotspot with a network named with the first letters "**HW**". (Desktop computers require your own wireless network card) 
 
 <img class="common_img" src="../_static/media/11/1.1/image3.png" />
 
-(3) Open PC software, click "Scan" and wait for a moment to receive the data as below picture.
+(3) Open PC software, click "**Scan**" and wait for a moment to receive the data as below picture.
 
 <img class="common_img" src="../_static/media/11/1.1/image4.png"  />
 
@@ -48,7 +48,7 @@ If the error message appears, the reason is that the folder is saved by the file
 
 | Icon                                                         | Function                                                |
 | ------------------------------------------------------------ | ------------------------------------------------------- |
-| <img src="../_static/media/11/1.1/image9.png" class="common_img" /> | Display the returned image                              |
-| <img src="../_static/media/11/1.1/image10.png" class="common_img" /> | Call to operation                                       |
-| <img src="../_static/media/11/1.1/image11.png" class="common_img" /> | Adjust rotation, robotic stance (high to low) and speed |
-| <img src="../_static/media/11/1.1/image12.png" class="common_img" /> | Scan, connect or turn off the launched hotspot          |
+| <img src="../_static/media/11/1.1/image9.png"/> | Display the returned image                              |
+| <img src="../_static/media/11/1.1/image10.png"/> | Call to operation                                       |
+| <img src="../_static/media/11/1.1/image11.png"/> | Adjust rotation, robotic stance (high to low) and speed |
+| <img src="../_static/media/11/1.1/image12.png"/> | Scan, connect or turn off the launched hotspot          |
