--- a/source/docs/12.AI Transport Lesson.md
+++ b/source/docs/12.AI Transport Lesson.md
@@ -56,7 +56,7 @@ The input command is case-sensitive, and keywords can be auto-completed using th
 
 <img  class="common_img" src="../_static/media/9/1.1/image2.png"  />
 
-(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "Ctrl+Alt+T" to open the LX terminal.
+(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "**Ctrl+Alt+T**" to open the LX terminal.
 
 (3) Execute the command to navigate to the directory where the program is located, then press Enter: 
 
@@ -70,7 +70,7 @@ cd spiderpi/functions
 python3 self_transport.py
 ```
 
-(5) To close the program, simply press "Ctrl+C" in the LX terminal. If it does not close, press it multiple times.
+(5) To close the program, simply press "**Ctrl+C**" in the LX terminal. If it does not close, press it multiple times.
 
 ### 8.2.4 Program Outcome
 
@@ -84,7 +84,7 @@ Place SpiderPi and blocks on the placement zone and start AI transport. SpiderPi
 
 ### 8.2.5 Program Analysis
 
-The source code of the program is located in: [/home/pi/spiderpi/extend/self_transport.py]()
+The source code of the program is located in: [/home/pi/spiderpi/extend/self_transport.py](https://store.hiwonder.com.cn/docs/spiderpi/source_code/self_transport.zip)
 
 * **Transportation Color and Preset Position Parameter** 
 
@@ -526,7 +526,7 @@ The input command is case-sensitive, and keywords can be auto-completed using th
 
 <img  class="common_img" src="../_static/media/9/1.1/image2.png"  />
 
-(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "Ctrl+Alt+T" to open the LX terminal.
+(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "**Ctrl+Alt+T**" to open the LX terminal.
 
 (3) Execute the command to navigate to the directory where the program is located, then press Enter: 
 
@@ -540,7 +540,7 @@ cd spiderpi/functions
 python3 transport_cleaning.py
 ```
 
-(5) To close the program, simply press "Ctrl+C" in the LX terminal. If it does not close, press it multiple times.
+(5) To close the program, simply press "**Ctrl+C**" in the LX terminal. If it does not close, press it multiple times.
 
 ### 8.3.4 Project Outcome
 
@@ -554,7 +554,7 @@ After starting the game, place the blue and green blocks randomly within the red
 
 ### 8.3.5 Program Analysis
 
-The source code of the program is located in: [/home/pi/spiderpi/extend/transport_cleaning.py]()
+The source code of the program is located in: [/home/pi/spiderpi/extend/transport_cleaning.py](https://store.hiwonder.com.cn/docs/spiderpi/source_code/transport_cleaning.zip)
 
 * **Detect Red Line Parameter** 
 
@@ -958,7 +958,7 @@ The input command is case-sensitive, and keywords can be auto-completed using th
 
 <img  class="common_img" src="../_static/media/9/1.1/image2.png"  />
 
-(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "Ctrl+Alt+T" to open the LX terminal.
+(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "**Ctrl+Alt+T**" to open the LX terminal.
 
 (3) Execute the command to navigate to the directory where the program is located, then press Enter: 
 
@@ -972,7 +972,7 @@ cd spiderpi/functions
 python3 apriltag_follow.py
 ```
 
-(5) To close the program, simply press "Ctrl+C" in the LX terminal. If it does not close, press it multiple times.
+(5) To close the program, simply press "**Ctrl+C**" in the LX terminal. If it does not close, press it multiple times.
 
 ### 8.4.3 Project Outcome
 
@@ -982,7 +982,7 @@ Start the function, take the label card and align it with the camera for identif
 
 ### 8.4.4 Program Analysis
 
-The source code of the program is located in:[/home/pi/spiderpi/extend/apriltag_follow.py]()
+The source code of the program is located in:[/home/pi/spiderpi/extend/apriltag_follow.py](https://store.hiwonder.com.cn/docs/spiderpi/source_code/apriltag_follow.py)
 
 * **Tag Detection Parameter** 
 
