en SpiderPi 1 commit

--- a/source/docs/12.AI Transport Lesson.md
+++ b/source/docs/12.AI Transport Lesson.md
@@ -2,15 +2,15 @@
 
 ## 8.1 Transport Bracket Assembly
 
-<p class="step">Step1：</p>
+<p class="step">Step1:</p>
 
 <img class="common_img" src="../_static/media/12/1.1/1.png" width="700px" />
 
-<p class="step">Step2：</p>
+<p class="step">Step2:</p>
 
 <img class="common_img" src="../_static/media/12/1.1/2.png"  width="700px" />
 
-<p class="step">Step3：</p>
+<p class="step">Step3:</p>
 
 <img class="common_img" src="../_static/media/12/1.1/3-1.png"  width="900px"  />
 
