--- a/source/docs/1.getting_ready.md
+++ b/source/docs/1.getting_ready.md
@@ -42,7 +42,7 @@ Furthermore, unless explicitly stated by Hiwonder, we are not responsible for an
 
 **(1) Standard Packing List**
 
-<table class="docutils-nobg" border="1" style="text-align:center;">
+<table class="docutils-nobg" border="1" style="text-align:center;width:800px;">
   <thead>
     <tr>
       <th style="text-align: center;">No.</th>
@@ -105,7 +105,7 @@ Furthermore, unless explicitly stated by Hiwonder, we are not responsible for an
 
 **(2) Advanced Packing List**
 
-<table class="docutils-nobg" border="1" style="text-align:center;">
+<table class="docutils-nobg" border="1" style="text-align:center;width:800px;">
   <thead>
     <tr>
       <th style="text-align: center;">No.</th>
@@ -115,7 +115,6 @@ Furthermore, unless explicitly stated by Hiwonder, we are not responsible for an
     </tr>
   </thead>
   <tbody>
-    <!-- 数据行 -->
     <tr>
       <td style="text-align: center;">1</td>
       <td style="text-align: center;">SpiderPi</td>
@@ -162,7 +161,7 @@ Furthermore, unless explicitly stated by Hiwonder, we are not responsible for an
       <td style="text-align: center;">8</td>
       <td style="text-align: center;">Map</td>
       <td style="text-align: center;">1</td>
-      <td style="text-align: center;"><img src="../_static/media/1/1.1/image9.png"/></td>
+      <td style="text-align: center;"><img src="../_static/media/1/1.1/image9.png" style="width:800px;"/></td>
     </tr>
     <tr>
       <td style="text-align: center;">9</td>
