en SpiderPi 1 commit

--- a/source/docs/2.quick_user_experience.md
+++ b/source/docs/2.quick_user_experience.md
@@ -138,13 +138,13 @@ For detailed introduction to robot games, please refer to the file in "**[2.2 AP
 
 <p id="anchor_2"></p>
 
-## 2.  APP Control
+## 2.2  APP Control
 
-### 2.1 Preparation
+### 2.2.1 Preparation
 
 Install APP and connect SpiderPi to APP according to the instruction in [**2.1 APP Installation and Connection**](#anchor_2_3).
 
-### 2.2 Experience Robot Games
+### 2.2.2 Experience Robot Games
 
 After connecting, click SpiderPi icon to enter the mode selection interface.
 
@@ -195,11 +195,9 @@ This game allows real-time control of the robot's movements to complete tasks su
 This game can recognize red, green, and blue. SpiderPi will nod when it detects red and shake its head when it detects blue or green.
 
 :::{Note}
-
 * Please start this game under a well-lit environment, but try to keep it from direct light.
 * When recognizing, please do not have the same or similar colored object within the detected range to avoid interference.
 *  If the recognition effect is not good enough, please refer to  [2.3 Adjust Color Threshold](#anchor_2_3).
-
 :::
 
 (1) This game allows real-time control of the robot's movements to complete tasks such as grasping, transporting, and placing color blocks. The interface is divided into four parts, each with its description and functional icon as shown below:
