en SpiderPi 5 commit

--- a/source/docs/2.quick_user_experience.md
+++ b/source/docs/2.quick_user_experience.md
@@ -104,7 +104,7 @@ For detailed introduction to robot games, please refer to the file in "**[2.2 AP
 
 <img src="../_static/media/2/1.1/image14.jpeg"   />
 
-(5) Tap "Go to connect device hotspot".
+(5) Tap "**Go to connect device hotspot**".
 
 <img src="../_static/media/2/1.1/image15.jpeg"   />
 
@@ -418,7 +418,6 @@ The table below list function of specific icon.
 </tbody>
 </table>
 
-
 ### 2.3.3 Adjust Color Threshold
 
 (1) Select color to be adjusted. Take red as example.
@@ -454,12 +453,3 @@ if you need to close Instruction window, select "**OK**".
 (7) Remember to save the value after adjustment.
 
 <img src="../_static/media/2/3.1/image26.png"  />
-
-
-
-
-
-
-
-
-
