en SpiderPi 5 commit

--- a/source/docs/9.ai_vision_project.md
+++ b/source/docs/9.ai_vision_project.md
@@ -934,14 +934,14 @@ Position marking requires specific detection algorithms. The basic principle is 
 ### 5.3.2 Start and Close the Game
 
 :::{Note}
-The input of commands must strictly distinguish between uppercase and lowercase letters, as well as spaces. Additionally, you can use the "Tab" key on the keyboard to auto-complete keywords.
+The input of commands must strictly distinguish between uppercase and lowercase letters, as well as spaces. Additionally, you can use the "**Tab**" key on the keyboard to auto-complete keywords.
 :::
 
 (1) Power on the robot and use VNC Viewer to connect to the remote desktop.
 
 <img class="common_img" src="../_static/media/9/3.1/image3.png"  />
 
-(2) Click the<img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "**Ctrl+Alt+T**" to open the LX terminal.
+(2) Click the <img src="../_static/media/9/1.1/image3.png"  /> in the top left corner of the system desktop or press the shortcut "**Ctrl+Alt+T**" to open the LX terminal.
 
 (3) In the terminal, enter the command to navigate to the directory where the program is located, then press Enter:
 
@@ -1372,7 +1372,7 @@ import kinematics as kinematics
 ik = kinematics.IK()
 ```
 
-Import the libraries related to OpenCV, time, math, and threads. If want to call a function in library, you can use "library name+function name (parameter, parameter)". For example:
+Import the libraries related to OpenCV, time, math, and threads. If want to call a function in library, you can use "**library name+function name (parameter, parameter)**". For example:
 
 {lineno-start=199}
 
@@ -1607,7 +1607,7 @@ if key == 27:
     break
 ```
 
-The function `cv2.imshow()` is used to display an image in a window. "'frame'" is the name of the window, and "'Frame'" is the content to be displayed. It is important to include `cv2.waitKey()` after this function, otherwise the image won't be displayed. 
+The function `cv2.imshow()` is used to display an image in a window. "**'frame'**" is the name of the window, and "**'Frame'**" is the content to be displayed. It is important to include `cv2.waitKey()` after this function, otherwise the image won't be displayed. 
 The function `cv2.waitKey()` is used to wait for a key input, and the parameter "1" is the delay time.
 
 * **Subthread Analysis** 
@@ -1710,7 +1710,7 @@ It is recommended to use screenshot to record the initial value.
 
 (4) Drag the corresponding sliders of L, A, and B until the color area to be recognized in the left screen becomes white and other areas become black.
 
-Point the camera at the color you want to recognize. For example, if you want to recognize orange, you can put the orange in the camera's field of view. Adjust the corresponding sliders of L, A, and B until the orange part of the left screen becomes white and other colors become black, and then click " Save" button to keep the modified data.
+Point the camera at the color you want to recognize. For example, if you want to recognize orange, you can put the orange in the camera's field of view. Adjust the corresponding sliders of L, A, and B until the orange part of the left screen becomes white and other colors become black, and then click "**Save**" button to keep the modified data.
 
 <img class="common_img" src="../_static/media/9/4.1/image23.png"  />
 
@@ -2252,7 +2252,7 @@ python3 apriltag_recognition.py
 
 (4) If you want to exit the game programming, press "**Ctrl+C**" in the LX terminal interface. If the exit fails, please try it few more times.
 
-### 5.6.3 Function Extension
+### 5.6.3 Function Outcome
 
 :::{Note}
 For optimal tag detection, place the tag against a solid-colored or white background. Dark backgrounds (e.g., black) may interfere with tag recognition.
@@ -2874,45 +2874,7 @@ Start the facial recognition function, SpiderPi will rotate its head to detect f
 
 <img class="common_img" src="../_static/media/9/9.1/1.gif"  />
 
-### 5.9.4 Function Extension
-
-* **Modify Feedback Action** 
-
-The built-in file is located in : [/home/pi/SpiderPi/ActionGroups](https://store.hiwonder.com.cn/docs/spiderpi/source_code/ActionGroups.zip).
-
-Program default setting is that SpiderPi will execute the greeting action when detect the face. The feedback action can be revised to others such as twisting.
-
-(1) Enter command  to the directory where the game program is located.
-
-```bash
-cd SpiderPi/Functions/
-```
-
-(2) Enter command  to go into the game program through vim editor.
-
-```bash
-vim face_detect.py
-```
-
-(3) Input "**104**" and press "**shift+g**" to the line for modification.
-
-<img class="common_img" src="../_static/media/9/9.1/image6.png"  />
-
-<img class="common_img" src="../_static/media/9/9.1/image7.png"  />
-
-(4) "**wave**" in the above image is the name of greeting action. If we want to revise the action to bowing, enter "**twist**" instead of "**wave**" in the "Action group instruction" in the path:/home/pi/spiderpi/action_groups/.
-
-The action name can be found in the "Action group instruction". 
-
-(5) Press "**i**" to enter the editing mode, then modify "**wave**" to "**twist**".
-
-(6) Press "**Esc**" to enter last line command mode. Input "**:wq**" to save the file and exit the editor.
-
-```bash
-:wq
-```
-
-### 5.9.5 Program Analysis
+### 5.9.4 Program Analysis
 
 The source code of the program is located in：[/home/pi/spiderpi/functions/face_detect.py](https://store.hiwonder.com.cn/docs/spiderpi/source_code/face_detect.zip)
 
@@ -3157,6 +3119,44 @@ The first parameter `2` is the servo number, indicating that the control target 
 The second parameter `servo2_pulse` is the pulse width of the servo, ranging from 1000 to 1900.
 
 The third parameter `50` is the running time of the servo, in milliseconds.
+### 5.9.5 Function Extension
+
+* **Modify Feedback Action** 
+
+The built-in file is located in : [/home/pi/SpiderPi/ActionGroups](https://store.hiwonder.com.cn/docs/spiderpi/source_code/ActionGroups.zip).
+
+Program default setting is that SpiderPi will execute the greeting action when detect the face. The feedback action can be revised to others such as twisting.
+
+(1) Enter command  to the directory where the game program is located.
+
+```bash
+cd SpiderPi/Functions/
+```
+
+(2) Enter command  to go into the game program through vim editor.
+
+```bash
+vim face_detect.py
+```
+
+(3) Input "**104**" and press "**shift+g**" to the line for modification.
+
+<img class="common_img" src="../_static/media/9/9.1/image6.png"  />
+
+<img class="common_img" src="../_static/media/9/9.1/image7.png"  />
+
+(4) "**wave**" in the above image is the name of greeting action. If we want to revise the action to bowing, enter "**twist**" instead of "**wave**" in the "**Action group instruction**" in the path:/home/pi/spiderpi/action_groups/.
+
+The action name can be found in the "Action group instruction". 
+
+(5) Press "**i**" to enter the editing mode, then modify "**wave**" to "**twist**".
+
+(6) Press "**Esc**" to enter last line command mode. Input "**:wq**" to save the file and exit the editor.
+
+```bash
+:wq
+```
+
 
 ## 5.10 Auto Obstacle Avoidance
 
@@ -3191,35 +3191,7 @@ python3 avoidance.py
 
 After starting, the screen will display the measured distance. SpiderPi will turn left to avoid the obstacle when the distance less than 40cm; Move forward when the distance more than 40cm.
 
-### 5.10.4 Function Extension
-
-* **Modify the Measured Value** 
-
-The default measured range set by the program is 40cm. Please note that the modification range should be between 30-60cm. Therefore we're going to revise the range to 50cm as example.
-
-(1) Enter command to the directory where the game program is located.
-
-```bash
-vim avoidance.py
-```
-
-(2) Enter "**30**" and press "**shift+g**" to go into the game program.
-
-<img class="common_img" src="../_static/media/9/10.1/image7.png"  />
-
-(3) Press "**i**" to enter the editing mode, then modify the data from "**40.0**" to "**50.0**".
-
-<img class="common_img" src="../_static/media/9/10.1/image8.png"  />
-
-(4) Press "**Esc**" and "**shift+:**". Input "**:wq**" to save the file and exit the editor.
-
-```bash
-:wq
-```
-
-(5) Start the game again, the default measured range will be changed from 40cm to 50cm.
-
-### 5.10.5 Program Analysis
+### 5.10.4 Program Analysis
 
 The source code of the program is located in：[/home/pi/spiderpi/functions/avoidance.py](https://store.hiwonder.com.cn/docs/spiderpi/source_code/avoidance.zip)
 
@@ -3432,3 +3404,30 @@ The fourth parameter `50` is the speed in millimeters per second.
 The fifth parameter `1` is the number of executions, where 0 means infinite loops.
 
 `ik.back()`  controls the backward movement of SpiderPi.  `Ik.turn_left()` controls the left turn of SpiderPi on the spot, where the third parameter is the turning angle. `ik.turn_right()` controls the right turn of SpiderPi on the spot, where the third parameter is the turning angle. `ik.left_move()` controls the left movement of SpiderPi. `ik.right_move()` controls the right movement of SpiderPi. `ik.stand()` controls the standing posture of SpiderPi.
+### 5.10.5 Function Extension
+
+* **Modify the Measured Value** 
+
+The default measured range set by the program is 40cm. Please note that the modification range should be between 30-60cm. Therefore we're going to revise the range to 50cm as example.
+
+(1) Enter command to the directory where the game program is located.
+
+```bash
+vim avoidance.py
+```
+
+(2) Enter "**30**" and press "**shift+g**" to go into the game program.
+
+<img class="common_img" src="../_static/media/9/10.1/image7.png"  />
+
+(3) Press "**i**" to enter the editing mode, then modify the data from "**40.0**" to "**50.0**".
+
+<img class="common_img" src="../_static/media/9/10.1/image8.png"  />
+
+(4) Press "**Esc**" and "**shift+:**". Input "**:wq**" to save the file and exit the editor.
+
+```bash
+:wq
+```
+
+(5) Start the game again, the default measured range will be changed from 40cm to 50cm.
