en SpiderPi 1 commit

--- a/source/docs/2.quick_user_experience.md
+++ b/source/docs/2.quick_user_experience.md
@@ -52,7 +52,7 @@ After TurboPi boots up successfully, it enters AP direct connection mode, and ge
 
 (1) Open"**WonderPi**". Select **"Standard ->TurboPi"** in sequence.
 
-<img src="../_static/media/2/1.1/image3.jpeg"   />
+<img src="../_static/media/2/1.1/image3.jpg"   />
 
 (2) Tap **"+"** in bottom right corner, and then select **Direct Connection Mode**.
 
@@ -82,7 +82,7 @@ if you are informed of "**No Internet. Whether to keep connection**", just selec
 
 (6) Tap robot icon to enter mode selection interface.
 
-<img src="../_static/media/2/1.1/image10.jpeg"   />
+<img src="../_static/media/2/1.1/image10.jpg"   />
 
 For detailed introduction to robot games, please refer to the file in "**[2.2 APP Control](#anchor_2)**".
 
@@ -94,7 +94,7 @@ For detailed introduction to robot games, please refer to the file in "**[2.2 AP
 
 (2) After connection, open **"WonderPi"**. Select **"Standard ->TurboPi"** in sequence.
 
-<img src="../_static/media/2/1.1/image12.jpeg"   />
+<img src="../_static/media/2/1.1/image12.jpg"   />
 
 (3) Tap **"+"** in bottom right corner, and then select LAN Mode.
 
@@ -132,7 +132,7 @@ For detailed introduction to robot games, please refer to the file in "**[2.2 AP
 
 (10) Tap robot icon to enter mode selection interface.
 
-<img src="../_static/media/2/1.1/image21.jpeg"   />
+<img src="../_static/media/2/1.1/image21.jpg"   />
 
 For detailed introduction to robot games, please refer to the file in "**[2.2 APP Control](#anchor_2)**".
 
